syntax = "proto3";
package streaming.grpc;

service temperature {
  rpc Read (ReadRequest) returns (ReadResponse);
  rpc ReadStream (ReadStreamRequest) returns (stream ReadStreamResponse);
}

message ReadRequest {
  string room = 1;
  string floor = 2;
  string building = 3;
}

message ReadResponse {
  double value = 1;
}

message ReadStreamRequest {
  string room = 1;
  string floor = 2;
  string building = 3;
}

message ReadStreamResponse {
  int32 index = 1;
  int64 timestamp = 2;
  double value = 3;
}